<resources>
    <string name="app_name">E-commerce Template</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email"> E-mail</string>
    <string name="prompt_password"> Contraseña</string>
    <string name="confirm_password"> Confirmar Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_reg">Registrar</string>
    <string name="username"> Nombre</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email</string>

    <string-array name="lista1">
        <item>Seleccione el año...</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
    </string-array>

    <string-array name="lista2">
        <item>Seleccione la marca...</item>
        <item>Sony</item>
        <item>Honda</item>
        <item>Asus</item>
        <item>BENQ</item>
    </string-array>

    <string-array name="lista3">
        <item>Seleccione el producto...</item>
        <item>Vaio</item>
        <item>X-Box One</item>
    </string-array>

    <string-array name="query_suggestions">
        <item>Sony</item>
        <item>asus</item>
        <item>dell</item>
        <item>alienware</item>
        <item>rog</item>
    </string-array>


    <string name="title_activity_splash">E-commerce Template</string>
    <string name="title_activity_loggedin">LoggedinActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ID App de Facebook -->
    <string name="facebook_app_id">1799049323686290</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_login_cancel">Login Cancelado</string>
    <string name="error_facebook_login">Error al Iniciar Sesión con Facebook</string>
    <string name="Error_firebase_login">Error Login FireBase</string>

</resources>
